# cam-testbed

./: .gitignore  CMakeLists.txt  README.md
src/: cam.cpp  cam.hpp  discovery.cpp  discovery.hpp  main.cpp  util.hpp
tools/: run_dummy_cam.py  test.py
tools/cmodule/: random.cpp  random.hpp  raytrace_main.cpp  thread_pool.cpp  thread_pool.hpp
tools/pymodule/: raytrace.py
tools/sample_config/: calibration_rig.yaml
